--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 	<!-- Bootstrap & CSS -->
 	<link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/custom.css" rel="stylesheet">
+  <link href="css/business-frontpage.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css" />
   <link href="css/ngAnimate.css" rel="stylesheet">
   
@@ -22,10 +23,6 @@
  
  <!-- Angular-UI -->
  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.0/ui-bootstrap-tpls.min.js"></script>
-
- <!-- Angular ng-repeat/ng-options repeat filter -->
- <script src="http://www.cdnjs.com/libraries/angular-filter"></script>
- <script src="js/lib/angular-filter.min.js"></script>
 
  <!-- Extended bootstrap components -->
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/css/jasny-bootstrap.min.css">
